Har påbörjat valideringen med regex inne i helpermappen

--- a/Contact_Information_Consol/Contact_Information_Consol.csproj
+++ b/Contact_Information_Consol/Contact_Information_Consol.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
     <Folder Include="Factories\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
